update imdb conf

--- a/cralwer/imdb.conf
+++ b/cralwer/imdb.conf
@@ -1,131 +1,245 @@
 {
     "base_url": "http://www.imdb.com/title/tt%s/",
-    "page": {
-        "Overview": {
-            "main details": {
-                "param": "maindetails",
-                "enabled": "False"
-            },
-            "combined details": {
-                "param": "combined"
-            },
-            "full cast and crew": {
-                "param": "fullcredits"
-            },
-            "company credits": {
-                "param": "companycredits"
-            }
-        },
-        "Awards & Reviews": {
-            "user reviews": {
-                "param": "reviews"
-            },
-            "external reviews": {
-                "param": "externalreviews"
-            },
-            "awards": {
-                "param": "awards"
-            },
-            "user ratings": {
-                "param": "ratings"
-            },
-            "parents guide": {
-                "param": "parentalguide"
-            },
-            "message board": {
-                "param": "board"
-            }
-        },
-        "Plot & Quotes": {
-            "plot summary": {
-                "param": "plotsummary"
-            },
-            "synopsis": {
-                "param": "synopsis"
-            },
-            "plot keywords": {
-                "param": "keywords"
-            },
-            "memorable quotes": {
-                "param": "quotes"
-            }
-        },
-        "Did You Know?": { 
-            "trivia": {
-                "param": "trivia"
-            },
-            "goofs": {
-                "param": "goofs"
-            },
-            "soundtrack listing": {
-                "param": "soundtrack"
-            },
-            "crazy credits": {
-                "param": "crazycredits"
-            },
-            "alternate versions": {
-                "param": "alternateversions"
-            },
-            "movie connections": {
-                "param": "movieconnections"
-            },
-            "FAQ": {
-                "param": "faq"
-            }
-        },
-        "Other Info": {
-            "box office/business": {
-                "param": "business"
-            },
-            "release dates": {
-                "param": "releaseinfo"
-            },
-            "filming locations": {
-                "param": "locations"
-            },
-            "technical specs": {
-                "param": "technical"
-            },
-            "literature listings": {
-                "param": "literature"
-            },
-            "NewsDesk": {
-                "param": "news"
-            }
-        },
-        "Promotional": {
-            "taglines": {
-                "param": "taglines"
-            },
-            "trailers and videos": {
-                "param": "videogallery"
-            },
-            "posters": {
-                "param": "posters"
-            },
-            "photo gallery": {
-                "param": "photogallery"
-            }
-        },
-        "External Links": {
-            "showtimes": {
-                "param": "cinemashowtimes"
-            },
-            "official sites": {
-                "param": "officialsites"
-            },
-            "miscellaneous": {
-                "param": "miscsites"
-            },
-            "photographs": {
-                "param": "photosites"
-            },
-            "sound clips": {
-                "param": "soundsites"
-            },
-            "video clips": {
-                "param": "videosites"
-            }
-        }
-    }
+    "category": [{
+        "name": "Overview",
+        "pages": [{
+            "name": "main details",
+            "param": "maindetails",
+            "enabled": false
+        }, {
+            "name": "combined details",
+            "param": "combined",
+            "object": [{
+                "name": "title",
+                "param":"title"
+            }, {
+                "name": "content",
+                "param": "tn15content",
+                "parse": false,
+                "object": [{
+                    "name": "overview",
+                    "parse": false,
+                    "object": [{
+                        "name": "star",
+                        "param": "div.starbar-meta",
+                        "parse": false,
+                        "object": [{
+                            "name": "rating",
+                            "param": "b"
+                        }, {
+                            "name": "vote",
+                            "param": "a[href=\"ratings\"]"
+                        }]
+                    }, {
+                        "name": "director",
+                        "param": "#director-info > div > a",
+                        "index": ":"
+                    }, {
+                        "name": "writers",
+                        "param": {
+                            "param": ".info",
+                            "index": 3,
+                            "child-param": {
+                                "param": "a"
+                            }
+                        },
+                        "index": ":"
+                    }, {
+                        "name": "contact",
+                        "param": {
+                            "param": ".info",
+                            "index": 4,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        },
+                        "standard": true
+                    }, {
+                        "name": "release date",
+                        "param": {
+                            "param": ".info",
+                            "index": 5,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        },
+                        "standard": true
+                    }, {
+                        "name": "genre",
+                        "param": {
+                            "param": ".info",
+                            "index": 6,
+                            "child-param": {
+                                "param": ".info-content > a"
+                            }
+                        },
+                        "index": "0:1"
+                    }, {
+                        "name": "tagline",
+                        "param": {
+                            "param": ".info",
+                            "index": 7,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        },
+                        "standard": true
+                    }, {
+                        "name": "plot",
+                        "param": {
+                            "param": ".info",
+                            "index": 8,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        },
+                        "standard": true
+                    }, {
+                        "name": "plot keywords",
+                        "param": "#tn15plotkeywords a",
+                        "index": ":"
+                    }, {
+                        "name": "awards",
+                        "param": {
+                            "param": ".info",
+                            "index": 9,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        },
+                        "standard": true
+                    }]
+                }, {
+                    "name": "cast",
+                    "parse": false,
+                    "object": [{
+                        "name": "cast",
+                        "param": "table.cast tr",
+                        "parse": false,
+                        "object": [{
+                            "name": "cast-main",
+                            "index": {
+                                "start": 0,
+                                "end": {
+                                    "param": "td[colspan=\"4\"]",
+                                    "next": "parent"
+                                }
+                            },
+                            "parse": false,
+                            "object": [{
+                                "name": "name",
+                                "param": "td.nm"
+                            }, {
+                                "name": "charactor",
+                                "param": "td.char"
+                            }]
+                        }, {
+                            "name": "cast-main",
+                            "index": {
+                                "start": {
+                                    "param": "td[colspan=\"4\"]",
+                                    "next": "parent",
+                                    "offset": 1
+                                }
+                            },
+                            "parse": false,
+                            "object": [{
+                                "name": "name",
+                                "param": "td.nm"
+                            }, {
+                                "name": "charactor",
+                                "param": "td.char"
+                            }]
+                        }],
+                        "index": ":"
+                    }]
+                }, {
+                    "name": "additional details",
+                    "parse": false,
+                    "object": [{
+                        "name": "also known as",
+                        "param": {
+                            "param": ".info",
+                            "index": 12,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        }
+                    }, {
+                        "name": "mpaa",
+                        "param": {
+                            "param": ".info",
+                            "index": 13,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        }
+                    }, {
+                        "name": "parents guide",
+                        "param": {
+                            "param": ".info",
+                            "index": 14,
+                            "child-param": {
+                                "param": ".info-content > a"
+                            }
+                        }
+                    }, {
+                        "name": "runtime",
+                        "param": {
+                            "param": ".info",
+                            "index": 15,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        }
+                    }, {
+                        "name": "country",
+                        "param": {
+                            "param": ".info",
+                            "index": 16,
+                            "child-param": {
+                                "param": ".info-content > a"
+                            }
+                        }
+                    }, {
+                        "name": "language",
+                        "param": {
+                            "param": ".info",
+                            "index": 17,
+                            "child-param": {
+                                "param": ".info-content > a"
+                            }
+                        }
+                    }, {
+                        "name": "color",
+                        "param": {
+                            "param": ".info",
+                            "index": 18,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        }
+                    }, {
+                        "name": "aspect ratio",
+                        "param": {
+                            "param": ".info",
+                            "index": 19,
+                            "child-param": {
+                                "param": ".info-content"
+                            }
+                        }
+                    }, {
+                        "name": "sound mix",
+                        "param": {
+                            "param": ".info",
+                            "index": 20,
+                            "child-param": {
+                                "param": ".info-content > a"
+                            }
+                        }
+                    }]
+                }]
+            }]
+        }]
+    }]
 }
