add crawler file and run file

--- a/crawler/imdb.conf
+++ b/crawler/imdb.conf
@@ -1,5 +1,5 @@
 {
-    "base_url": "http://www.imdb.com/title/tt%s/",
+    "base_url": "http://www.imdb.com/title/",
     "category": [{
         "name": "Overview",
         "pages": [{
@@ -14,7 +14,7 @@
                 "param":"title"
             }, {
                 "name": "content",
-                "param": "tn15content",
+                "param": "#tn15content",
                 "parse": false,
                 "object": [{
                     "name": "overview",
@@ -38,86 +38,95 @@
                         "name": "writers",
                         "param": {
                             "param": ".info",
-                            "index": 3,
-                            "child-param": {
-                                "param": "a"
-                            }
+                            "index": 4,
+                            "child-param": ".info-content a"
                         },
                         "index": ":"
                     }, {
                         "name": "contact",
                         "param": {
                             "param": ".info",
-                            "index": 4,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 5,
+                            "child-param": ".info-content"
                         },
-                        "standard": true
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": "\n",
+                                "dest": " "
+                            }]
+                        }
                     }, {
                         "name": "release date",
                         "param": {
                             "param": ".info",
-                            "index": 5,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 6,
+                            "child-param": ".info-content"
                         },
-                        "standard": true
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": "\\s*See more »",
+                                "dest": ""
+                            }]
+                        }
                     }, {
                         "name": "genre",
                         "param": {
                             "param": ".info",
-                            "index": 6,
-                            "child-param": {
-                                "param": ".info-content > a"
-                            }
+                            "index": 7,
+                            "child-param": ".info-content a"
                         },
-                        "index": "0:1"
+                        "index": "0:-1"
                     }, {
                         "name": "tagline",
                         "param": {
                             "param": ".info",
-                            "index": 7,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 8,
+                            "child-param": ".info-content"
                         },
-                        "standard": true
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": "\\s*See more.*",
+                                "dest": ""
+                            }]
+                        }
                     }, {
                         "name": "plot",
                         "param": {
                             "param": ".info",
-                            "index": 8,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 9,
+                            "child-param": ".info-content"
                         },
-                        "standard": true
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": " *Full summary » *.{0,1}| *Full synopsis »",
+                                "dest": ""
+                            }]
+                        }
                     }, {
                         "name": "plot keywords",
                         "param": "#tn15plotkeywords a",
                         "index": ":"
                     }, {
                         "name": "awards",
-                        "param": {
-                            "param": ".info",
-                            "index": 9,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
-                        },
-                        "standard": true
+                        "enabled": false
                     }]
                 }, {
                     "name": "cast",
                     "parse": false,
                     "object": [{
                         "name": "cast",
-                        "param": "table.cast tr",
                         "parse": false,
                         "object": [{
                             "name": "cast-main",
+                            "param": "table.cast tr",
                             "index": {
                                 "start": 0,
                                 "end": {
@@ -134,13 +143,15 @@
                                 "param": "td.char"
                             }]
                         }, {
-                            "name": "cast-main",
+                            "name": "cast-other",
+                            "param": "table.cast tr",
                             "index": {
                                 "start": {
                                     "param": "td[colspan=\"4\"]",
                                     "next": "parent",
                                     "offset": 1
-                                }
+                                },
+                                "end": -1
                             },
                             "parse": false,
                             "object": [{
@@ -150,8 +161,7 @@
                                 "name": "charactor",
                                 "param": "td.char"
                             }]
-                        }],
-                        "index": ":"
+                        }]
                     }]
                 }, {
                     "name": "additional details",
@@ -160,82 +170,76 @@
                         "name": "also known as",
                         "param": {
                             "param": ".info",
-                            "index": 12,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 14,
+                            "child-param": ".info-content"
+                        },
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": "\\s*See more.*",
+                                "dest": ""
+                            }]
                         }
                     }, {
                         "name": "mpaa",
                         "param": {
                             "param": ".info",
-                            "index": 13,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 15,
+                            "child-param": ".info-content"
                         }
                     }, {
                         "name": "parents guide",
-                        "param": {
-                            "param": ".info",
-                            "index": 14,
-                            "child-param": {
-                                "param": ".info-content > a"
-                            }
-                        }
+                        "enabled": false
                     }, {
                         "name": "runtime",
                         "param": {
                             "param": ".info",
-                            "index": 15,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 17,
+                            "child-param": ".info-content"
                         }
                     }, {
                         "name": "country",
                         "param": {
                             "param": ".info",
-                            "index": 16,
-                            "child-param": {
-                                "param": ".info-content > a"
-                            }
+                            "index": 18,
+                            "child-param": ".info-content > a"
                         }
                     }, {
                         "name": "language",
                         "param": {
                             "param": ".info",
-                            "index": 17,
-                            "child-param": {
-                                "param": ".info-content > a"
-                            }
+                            "index": 19,
+                            "child-param": ".info-content > a"
                         }
                     }, {
                         "name": "color",
                         "param": {
                             "param": ".info",
-                            "index": 18,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 20,
+                            "child-param": ".info-content"
                         }
                     }, {
                         "name": "aspect ratio",
                         "param": {
                             "param": ".info",
-                            "index": 19,
-                            "child-param": {
-                                "param": ".info-content"
-                            }
+                            "index": 21,
+                            "child-param": ".info-content"
+                        },
+                        "standard": {
+                            "strip": true,
+                            "do": [{
+                                "type": "replace",
+                                "pattern": "See more.*",
+                                "dest": ""
+                            }]
                         }
                     }, {
                         "name": "sound mix",
                         "param": {
                             "param": ".info",
-                            "index": 20,
-                            "child-param": {
-                                "param": ".info-content > a"
-                            }
+                            "index": 22,
+                            "child-param": ".info-content > a"
                         }
                     }]
                 }]
